Bugfix: Make delete dropdown visible again

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -79,7 +79,7 @@ $side-width: 315px;
 .box-footer .form-inline{
     .btn-group.open{ position: relative; }
     .control-label, .select2-container{
-        display: none;
+        // display: none;
     }
     select + .btn{ margin: 0 0 0 15px; }
 } 
